--- a/app/pages/finance/management/management.html
+++ b/app/pages/finance/management/management.html
@@ -15,4 +15,255 @@
 
 <ion-content padding>
 
+
+  <ion-toolbar [attr.primary]="isAndroid ? '' : null" no-border-top>
+    <ion-segment [(ngModel)]="sales" [attr.light]="isAndroid ? '' : null">
+
+      <ion-segment-button value="1">
+        资源信息
+      </ion-segment-button>
+
+      <ion-segment-button value="2">
+        事件信息
+      </ion-segment-button>
+
+      <ion-segment-button value="3">
+        代理信息
+      </ion-segment-button>
+
+      <ion-segment-button value="4">
+        费用说明
+      </ion-segment-button>
+
+    </ion-segment>
+  </ion-toolbar>
+
+  <div [ngSwitch]="sales">
+
+    <ion-card *ngSwitchCase="'1'">
+      <ion-card-content>
+        <ion-list>
+
+          <ion-row>
+            <ion-col>
+              <button primary clear small>
+                <ion-icon name='ios-add-circle-outline'></ion-icon>
+                <div (click)="ruteAftersalePage()">添加</div>
+              </button>
+            </ion-col>
+            <ion-col>
+              <button primary clear small>
+                <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+                <div>关系</div>
+              </button>
+            </ion-col>
+            <ion-col center text-center>
+              <button primary clear small>
+                <ion-icon name='ios-more'></ion-icon>
+                <div>更多</div>
+              </button>
+            </ion-col>
+          </ion-row>
+
+          <ion-item>
+            <ion-label primary floating>关系</ion-label>
+            <ion-textarea rows="2"></ion-textarea>
+          </ion-item>
+
+          <ion-item>
+            <ion-thumbnail item-left>
+              <img src="img/thumbnail-puppy-1.jpg">
+            </ion-thumbnail>
+            <h2>Ruby</h2>
+          </ion-item>
+          <ion-item>
+            <ion-thumbnail item-left>
+              <img src="img/thumbnail-kitten-1.jpg">
+            </ion-thumbnail>
+            <h2>Ruby</h2>
+          </ion-item>
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'2'">
+      <ion-card-content>
+        <ion-list>
+          <ion-row>
+            <ion-col>
+              <button primary clear small>
+                <ion-icon name='ios-add-circle-outline'></ion-icon>
+                <div (click)="rutePurcchasePage()">添加</div>
+              </button>
+            </ion-col>
+            <ion-col>
+              <button primary clear small>
+                <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+                <div>审核</div>
+              </button>
+            </ion-col>
+            <ion-col center text-center>
+              <button primary clear small>
+                <ion-icon name='ios-more'></ion-icon>
+                <div>更多</div>
+              </button>
+            </ion-col>
+          </ion-row>
+
+          <ion-item-group>
+            <ion-item-divider light>增量事件</ion-item-divider>
+            <ion-label primary floating>事件说明</ion-label>
+            <ion-textarea rows="2"></ion-textarea>
+
+            <ion-item-divider light>减量事件</ion-item-divider>
+            <ion-label primary floating>事件说明</ion-label>
+            <ion-textarea rows="2"></ion-textarea>
+
+            <ion-item-divider light>事件二重性</ion-item-divider>
+            <ion-label primary floating>二重性说明</ion-label>
+            <ion-textarea rows="2"></ion-textarea>
+
+            <ion-item-divider light>会计科目</ion-item-divider>
+            <ion-label primary floating>借方科目</ion-label>
+            <ion-textarea rows="2"></ion-textarea>
+
+            <ion-label primary floating>贷方科目</ion-label>
+            <ion-textarea rows="2"></ion-textarea>
+
+            <ion-label primary floating>计账摘要</ion-label>
+            <ion-textarea rows="4"></ion-textarea>
+          </ion-item-group>
+
+
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'3'">
+      <ion-card-content>
+        <ion-list>
+          <ion-row>
+            <ion-col>
+              <button primary clear small>
+                <ion-icon name='ios-add-circle-outline'></ion-icon>
+                <div (click)="ruteHumanresourcesPage()">添加</div>
+              </button>
+            </ion-col>
+            <ion-col>
+
+              <button primary clear small>
+                <ion-icon name='ios-checkmark-circle-outline'></ion-icon>
+                <div>审核</div>
+              </button>
+            </ion-col>
+            <ion-col center text-center>
+              <button primary clear small>
+                <ion-icon name='ios-more'></ion-icon>
+                <div>更多</div>
+              </button>
+            </ion-col>
+          </ion-row>
+
+          <ion-item>
+            <ion-avatar item-left>
+              <img src="img/avatar-leia.png">
+            </ion-avatar>
+            <h2>Cher</h2>
+            <p>Ugh. As if.</p>
+          </ion-item>
+          <ion-item>
+            <ion-avatar item-left>
+              <img src="img/marty-avatar.png">
+            </ion-avatar>
+            <h2>Cher</h2>
+            <p>Ugh. As if.</p>
+          </ion-item>
+
+        </ion-list>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngSwitchCase="'4'">
+      <ion-card-content>
+
+        <ion-list>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                订单号：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.dingdanhao}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                客户名称：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.kehu}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                联系人：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.zhiwei + " " + dingdan.lianxiren}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                联系电话：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.lianxidianhua}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                客户名称：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.kehu}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+          <ion-item>
+            <ion-row style="font-size: 9px;">
+              <ion-col width-33>
+                下单时间：
+              </ion-col>
+              <ion-col width-66>
+                {{dingdan.xiadantime}}
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-list>
+
+      </ion-card-content>
+      <ion-footer>
+        <ion-toolbar>
+          <p style="font-size: 9px;">申请人：{{sqr}}</p>
+          <p style="font-size: 9px;">合 计：24567.00元 共 2 件商品</p>
+          <ion-buttons end>
+            <button primary>
+              <ion-icon name="md-checkmark-circle-outline"></ion-icon>
+              保存
+            </button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-footer>
+    </ion-card>
+  </div>
+
+
 </ion-content>
